--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,39 @@ code {
     monospace;
 }
 
-.hero-bg {
-  background: url("./assets/ocean-1920x1280.png") no-repeat;
+.main {
+  background: url("./assets/sunset.png") no-repeat center 0 fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
+  min-height:100vh;
 } 
+ .main > .container {
+   max-width:100%;
+  background: rgb(239,235,230);
+  background: linear-gradient(90deg, rgba(239,235,230,0) 0%, rgba(239,235,230,0.6) 20%, rgba(239,235,230,0.7) 50%, rgba(239,235,230,0.6) 80%, rgba(239,235,230,0.3) 90%, rgba(239,235,230,0) 100%);
+ }
 
+
+.hero h1 {
+  font-size:4.5em;
+}
+
+.hero {
+  min-height: 70vh;
+  margin: 0 auto;
+  padding: 4em;
+  }
+
+.MuiAppBar-positionFixed {
+  height:60px;
+}
+
+.blurb {
+  margin-top: auto!important;
+}
+
+.blurb hr {
+  margin-bottom: 20px;
+}
