--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,120 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Overlock+SC&family=Red+Hat+Display&family=Titillium+Web&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Changa&family=Comfortaa&family=Fira+Sans:ital,wght@0,300;0,400;1,100;1,200&family=Julius+Sans+One&family=Overlock+SC&family=Red+Hat+Display&family=Titillium+Web&family=Urbanist&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size:1.3rem;
+  background: rgb(239,235,230);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+header {
+  box-shadow:none;
+  border: none;
+  color:rgb(239,235,230);
+}
 
 .main {
-  background: url("./assets/sunset.png") no-repeat center 0 fixed;
+  min-height:100vh;
+  background:#56606c;
+} 
+
+.main .hero {
+  padding:2em 0em;
+  width:100%;
+
+}
+.hero .bg {
+  height:100%;
+  background: url("./assets/sunset.png") no-repeat center 20% fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  min-height:100vh;
-} 
- .main > .container {
-   max-width:100%;
+  max-width:95%;
+  margin-bottom:2em;
+}
+
+.hero .title {
   background: rgb(239,235,230);
   background: linear-gradient(90deg, rgba(239,235,230,0) 0%, rgba(239,235,230,0.6) 20%, rgba(239,235,230,0.7) 50%, rgba(239,235,230,0.6) 80%, rgba(239,235,230,0.3) 90%, rgba(239,235,230,0) 100%);
- }
+  height:100%;
+  max-width:100%;
+  min-height: 53vh;
+  margin: 0 auto;
+  padding: 4em;
+}
 
 
-.hero h1 {
+.hero .title h1 {
   font-size:4.5em;
 }
 
-.hero {
-  min-height: 70vh;
+.hero .blurb {
+  max-width: 1200px;
+  color: rgb(239,235,230);
   margin: 0 auto;
-  padding: 4em;
-  }
+  font-family: 'Fira Sans', 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', Arial, Helvetica, sans-serif;
+  font-weight:200;
+  font-style:italic;
+  padding: 1.5em 0;
+  font-size: 2rem;
+  margin-top: auto!important;
+}
+
+
+.hero .blurb hr {
+  margin-bottom: 20px;
+}
+
+.about-wrapper {
+  background: rgb(239,235,230);
+  max-width: 100%!important;
+}
+.about {
+  padding: 4em 1em;
+  max-width:1200px;
+  margin: 0 auto;
+  font-size:1.4rem;
+
+}
+
+.about .blurb {
+  margin-left: 2em;
+}
 
 .MuiAppBar-positionFixed {
   height:60px;
 }
 
-.blurb {
-  margin-top: auto!important;
+header.MuiAppBar-root {
+  box-shadow:none;
 }
 
-.blurb hr {
-  margin-bottom: 20px;
-}
+/* TODO: make this actually dark (it's still light right now) */
+.fade-rule-dark {
+  height: 1px;
+  background-color: #E6E6E6;
+  /* width: 66.0em; */
+  margin: 0 auto;
+  background: rgb(239,235,230);
+  background: linear-gradient(90deg, rgba(239,235,230,0) 0%, rgba(239,235,230,0.6) 20%, rgba(239,235,230,0.7) 50%, rgba(239,235,230,0.6) 80%, rgba(239,235,230,0.3) 90%, rgba(239,235,230,0) 100%);
+ }
+
+.fade-rule-light {
+  height: 1px;
+  background-color: #E6E6E6;
+  /* width: 66.0em; */
+  margin: 0 auto;
+  background: rgb(239,235,230);
+  background: linear-gradient(90deg, rgba(239,235,230,0) 0%, rgba(239,235,230,0.6) 20%, rgba(239,235,230,0.7) 50%, rgba(239,235,230,0.6) 80%, rgba(239,235,230,0.3) 90%, rgba(239,235,230,0) 100%);
+ }
