added image to projects page, small refactoring of basepage to allow for more flexibility with headers and heros

--- a/src/pages/basepage.css
+++ b/src/pages/basepage.css
@@ -1,6 +1,11 @@
 
-.MuiAppBar-positionFixed {
-  height:60px;
+.header {
+  height:64px;
+}
+
+.header a {
+  height:100%;
+  width:64px;
 }
 
 header.MuiAppBar-root {
