--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -39,11 +39,10 @@
 .main-dark {
   background:#56606c;
 } 
-.main .hero {
+.home .hero {
   width:100%;
-
 }
-.hero .bg {
+.home .hero .bg {
   height:100%;
   background: url("../../assets/photos/sunset.png") no-repeat center 20% fixed;
   -webkit-background-size: cover;
@@ -54,7 +53,7 @@
   margin-bottom:2em;
 }
 
-.hero .title {
+.home .hero .title {
   background: rgb(239,235,230);
   background: linear-gradient(90deg, rgba(239,235,230,0) 0%, rgba(239,235,230,0.6) 20%, rgba(239,235,230,0.7) 50%, rgba(239,235,230,0.6) 80%, rgba(239,235,230,0.3) 90%, rgba(239,235,230,0) 100%);
   height:100%;
@@ -65,30 +64,30 @@
 }
 
 
-.hero .title h1 {
+.home .hero .title h1 {
   font-size:3rem;
 }
 
-.hero .title h4 {
+.home .hero .title h4 {
   font-size:2rem;
 }
 
 @media (min-width: 600px) {
-  .hero .title {
+  .home .hero .title {
     padding:4rem;
   }
 
-  .hero .title h1 {
+  .home .hero .title h1 {
     font-size:4rem;
   }
 
-  .hero .title h4 {
+  .home .hero .title h4 {
     font-size: 2.7rem
   }
 }
 
 
-.hero .blurb {
+.home .hero .blurb {
   max-width: 1200px;
   color: rgb(239,235,230);
   font-family: 'Fira Sans', 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -99,7 +98,7 @@
 }
 
 
-.hero .blurb hr {
+.home .hero .blurb hr {
   margin-bottom: 20px;
 }
 
@@ -134,6 +133,12 @@
   padding: 1.5em;
   text-align: center;
 }
-.services {
-  
+
+.home .fade-rule-dark {
+  margin-bottom: 2em;
+}
+
+
+.home .fade-rule-light {
+  margin-bottom: 2em;
 }
