--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -20,3 +20,20 @@
   background-size: cover;
   min-height:40vh;
 }
+
+.projects .card-expanded {
+  background: rgb(211, 213, 214);
+}
+
+.projects .close-icon {
+  float:right;
+}
+
+.projects .close-text {
+  border: 1px solid rgba(86,96,108, 0.3);
+  border-radius:3px;
+  font-weight:500;
+  margin-top:2em;
+  padding: 10px 15px;
+  background: rgb(177, 187, 190);
+}
