--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -1,3 +1,7 @@
+.projects {
+  word-wrap: break-word;
+}
+
 .projects .expand-btn {
   border: 1px solid rgba(86,96,108, 0.3);
   border-radius:0;
@@ -22,7 +26,7 @@
 }
 
 .projects .card-expanded {
-  background: rgb(211, 213, 214);
+  background: rgb(211, 213, 214)
 }
 
 .projects .close-icon {
