--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -90,8 +90,9 @@
   color: #282c34;
 }
 
-.infodump-dark {
-  color:rgb(239,235,230)
+.dark {
+  color:rgb(239,235,230);
+  background-color: rgb(86, 96, 108);
 }
 
 
@@ -104,7 +105,7 @@
 }
 
 .infodump-grid .MuiGrid-item:nth-child(2) {
-  padding-left: 2em;
+  /* padding-left: 2em; */
 }
 
 .services .card-content {
