added carousel into projects section of home page

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -112,6 +112,10 @@
   text-align: center;
 }
 
+.projects .all-projects {
+  font-size: 3rem;
+}
+
 .home .fade-rule-dark {
   margin-bottom: 2em;
 }
