--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -29,6 +29,12 @@
   background: rgb(211, 213, 214)
 }
 
+.projects .card-expanded .card-image {
+  max-height:600px;
+  max-width:100%;
+}
+
+
 .projects .close-icon {
   float:right;
 }
@@ -44,5 +50,9 @@
 
 .projects iframe {
   height: 100%;
+  min-height: 500px;
   width: 100%;
 }
+
+
+
