--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -5,6 +5,7 @@
 .projects .expand-btn {
   border: 1px solid rgba(86,96,108, 0.3);
   border-radius:0;
+  height:100%;
 }
 
 .projects .expand-btn:hover {
@@ -31,6 +32,7 @@
 
 .projects .card-expanded .card-image {
   max-height:600px;
+  object-fit: contain;
 }
 
 /* 
